--- a/pages/clases.html
+++ b/pages/clases.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/favicon.ico">
     <!-- link de BTS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../style/estilos.css">
-    <title>Clases</title>
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <meta name="description"
+    content="El entrenamiento personal está orientado a poner a disposición del cliente toda la tecnología, 
+    con la finalidad de alcanzar los mejores resultados en el menor tiempo, y de la forma más efectiva y segura.">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Force's Gym - Clases</title>
 </head>
 
 <body>
@@ -28,7 +32,7 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./clases.html" >Clases</a>
+                            <a class="nav-link active" href="./clases.html">Clases</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./gimnasios.html">Gimnasios</a>
@@ -47,78 +51,78 @@
 
     <main>
 
-        <div class="seccion1">
+        <div class="clases_container">
+            <h2>ELIGE LAS CLASES DE TU PREFERENCIA</h2>
+            <h2>Clases</h2>
             <section>
-                <h2>ELIGE LAS CLASES DE TU PREFERENCIA</h2>
-                <h2>Clases</h2>
-                <div class="seccion2">
-                    <div class="meta">
+                <div>
+                    <div class="clase">
                         <a href="">
                             <h3>Aeróbicos</h3>
                             <img src="../img/aerobicos.png" alt="">
                         </a>
-                        <p class="parrafo">Con el ejercicio aeróbico el organismo consume hidratos y grasas por lo que muchas
+                        <p class="parrafo">Con el ejercicio aeróbico el organismo consume hidratos y grasas por lo que
+                            muchas
                             personas optan por este tipo de actividades cuando tienen el objetivo de perder peso.
                             Inicialmente, el glucógeno se rompe para producir glucosa y posteriormente, pasa a
                             descomponerse la grasa a la vez que se produce una disminución del rendimiento.</p>
                     </div>
-                    <div class="meta">
+                    <div class="clase">
                         <a href="">
                             <h3>TRX</h3>
                             <img src="../img/trx.png" alt="">
                         </a>
-                        <p class="parrafo">Con el ejercicio aeróbico el organismo consume hidratos y grasas por lo que muchas
-                            personas optan por este tipo de actividades cuando tienen el objetivo de perder peso.
-                            Inicialmente, el glucógeno se rompe para producir glucosa y posteriormente, pasa a
-                            descomponerse la grasa a la vez que se produce una disminución del rendimiento.</p>
+                        <p class="parrafo">El TRX es un sistema de entrenamiento basado en la realización de ejercicios
+                            en suspensión, donde en las actividades que desempeña el deportista, las manos o los pies se
+                            encuentran sostenidos en un punto de anclaje mientras que la otra parte del cuerpo está
+                            apoyada en el suelo.</p>
                     </div>
 
-                    <div class="meta">
+                    <div class="clase">
                         <a href="">
                             <h3>Full Body</h3>
                             <img src="../img/full_body.png" alt="">
                         </a>
-                        <p class="parrafo">Con el ejercicio aeróbico el organismo consume hidratos y grasas por lo que muchas
-                            personas optan por este tipo de actividades cuando tienen el objetivo de perder peso.
-                            Inicialmente, el glucógeno se rompe para producir glucosa y posteriormente, pasa a
-                            descomponerse la grasa a la vez que se produce una disminución del rendimiento.</p>
+                        <p class="parrafo">El entrenamiento full body es aquel en donde se trabaja el cuerpo completo en
+                            cada una de las sesiones. Este tipo de entrenamiento es realmente práctico y efectivo, ya
+                            que activamos una gran cantidad de músculos sin necesidad de invertir mucho tiempo ni
+                            espacio.</p>
                     </div>
 
 
                 </div>
             </section>
             <section>
-                <div class="seccion2">
-                    <div class="meta">
+                <div>
+                    <div class="clase">
                         <a href="">
                             <h3>Baile</h3>
                             <img src="../img/baile.png" alt="">
                         </a>
-                        <p class="parrafo">Con el ejercicio aeróbico el organismo consume hidratos y grasas por lo que muchas
-                            personas optan por este tipo de actividades cuando tienen el objetivo de perder peso.
-                            Inicialmente, el glucógeno se rompe para producir glucosa y posteriormente, pasa a
-                            descomponerse la grasa a la vez que se produce una disminución del rendimiento.</p>
+                        <p class="parrafo">Bailar es una de las formas que realmente pueden iluminar las vidas monótonas
+                            de las personas. Cuando alguien decide iniciarse en el ejercicio físico suele tener en
+                            cuenta el nivel de diversión que supone. Y el baile es pura diversión.</p>
                     </div>
-                    <div class="meta">
+                    <div class="clase">
                         <a href="">
                             <h3>Zumba</h3>
                             <img src="../img/zumba.png" alt="">
                         </a>
-                        <p class="parrafo">Con el ejercicio aeróbico el organismo consume hidratos y grasas por lo que muchas
-                            personas optan por este tipo de actividades cuando tienen el objetivo de perder peso.
-                            Inicialmente, el glucógeno se rompe para producir glucosa y posteriormente, pasa a
-                            descomponerse la grasa a la vez que se produce una disminución del rendimiento.</p>
+                        <p class="parrafo">Que el baile es una actividad física muy beneficiosa para la salud no es nada
+                            nuevo. Como tampoco es algo nuevo el Zumba, el baile latino que arrasa en gimnasios de medio
+                            mundo y del que seguramente habrás oído hablar. Más allá de ser un ejercicio muy completo
+                            para todas aquellas que queremos ponernos en forma, el Zumba es un baile fácil y divertido
+                            que esconde una enorme cantidad de beneficios para el cuerpo. </p>
                     </div>
 
-                    <div class="meta">
+                    <div class="clase">
                         <a href="">
                             <h3>Strong</h3>
                             <img src="../img/strong.png" alt="">
                         </a>
-                        <p class="parrafo">Con el ejercicio aeróbico el organismo consume hidratos y grasas por lo que muchas
-                            personas optan por este tipo de actividades cuando tienen el objetivo de perder peso.
-                            Inicialmente, el glucógeno se rompe para producir glucosa y posteriormente, pasa a
-                            descomponerse la grasa a la vez que se produce una disminución del rendimiento.</p>
+                        <p class="parrafo">Los ejercicios que se practican en el strong van dirigidos a quemar grasa,
+                            construir masa muscular y tonificar todo el cuerpo, especialmente las abdominales, piernas y
+                            glúteos.</p>
                     </div>
 
 
@@ -129,11 +133,9 @@
     </main>
 
     <!-- scripts de BTS -->
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-        crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 
 </body>
 
