--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/favicon.ico">
     <!-- link de BTS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../style/styles.css">
-    <title>Información</title>
+    <meta name="description"
+    content="El entrenamiento personal está orientado a poner a disposición del cliente toda la tecnología, 
+    con la finalidad de alcanzar los mejores resultados en el menor tiempo, y de la forma más efectiva y segura.">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Force's Gym - Información</title>
 </head>
 
 <body>
