--- a/pages/planes.html
+++ b/pages/planes.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/favicon.ico">
     <!-- link de BTS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../style/styles.css">
-    <title>Planes</title>
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <meta name="description"
+    content="El entrenamiento personal está orientado a poner a disposición del cliente toda la tecnología, 
+    con la finalidad de alcanzar los mejores resultados en el menor tiempo, y de la forma más efectiva y segura.">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Force's Gym - Planes</title>
 </head>
 
 <body>
@@ -28,7 +32,7 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./clases.html" >Clases</a>
+                            <a class="nav-link" href="./clases.html">Clases</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./gimnasios.html">Gimnasios</a>
@@ -50,6 +54,9 @@
         <div class="seccion1">
             <section class="planes">
                 <h2>PLANES DE ENTRENAMIENTO</h2>
+                <p>Entrena con nosotros eligiendo un plan. Todos incluyen las áreas de cardio, peso integrado, peso
+                    libre, funcional, vestidores, lockers e instructores permanentes que realizan rutinas basadas en tu
+                    objetivo.</p>
                 <div>
                     <div class="meta">
                         <h3>Entrenamiento <br> Perzonalizado</h3>
@@ -59,7 +66,9 @@
                         </p>
                         <h2>$50.00</h2>
 
-                        <button type="button" class="btn">SELECCIONAR</button>
+                        <button type="button" class="btn btn-warning">SELECCIONAR</button>
+
+                        <hr>
 
                         <div class="ventajas">
                             <h5>Ventajas:</h5>
@@ -82,6 +91,8 @@
 
                         <button type="button" class="btn btn-warning">SELECCIONAR</button>
 
+                        <hr>
+
                         <div class="ventajas">
                             <h5>Ventajas:</h5>
                             <p>* Menor constancia </p>
@@ -92,20 +103,30 @@
                         </div>
                     </div>
 
+                </div>
 
+                <hr class="line_terminos">
+
+                <div class="terminos">
+                    <h2>Términos y Contratos</h2>
+                    <p>Accede y baje los términos para todos nuestros productos y servicios</p>
+                    <div>
+                        <a href=""> <h6>DESCARGUE LOS TÉRMINOS</h6> </a>
+                        
+                    </div>
                 </div>
             </section>
+
+            
         </div>
 
     </main>
 
 
     <!-- scripts de BTS -->
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-        crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 
 </body>
 
